Fix some bugs introduced by the nick-nhusb merge and related to the Tx Interrupt pipe transfer handling

While I'm here make some other changes moving towards MPification

PR/51151: athn panic on attach
PR/51458: usb athn panic